gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue28721.go
version https://git-lfs.github.com/spec/v1
oid sha256:757e62e3906ec67c89eadfb1ccf34e245b352b22c6249673ed0490ef722f1354
size 506
